--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not op_mini all"
+  "browserslist": [
+    "last 2 versions",
+    "android 4",
+    "opera 12"
     ],
     "development": [
       "last 1 chrome version",
