--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    "last 2 versions",
-    "android 4",
-    "opera 12"
+   "browserslist": {
+    "production": [
+      ">0.2%",
+      "not op_mini all",
+      "last 2 versions",
+      "android 4",
+      "opera 12"
     ],
     "development": [
       "last 1 chrome version",
